@@ -1,3 +1,8 @@
+2004-06-09  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * tests/benchmark.c
+    Added benchmark program.
+
 2004-05-27  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * tests/callback_test.c
